# ResuMe

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
Final-Project/app/main_service/: __init__.py  functions.py
Final-Project/app/main_service/templates/: homepage.html
Final-Project/app/model_service/: functions.py
app/: __init__.py  main.py
app/controller/: evaluation.py
app/main_service/: __init__.py  constants.py  functions.py  main.py  templates.py
app/main_service/controllers/: homepage.py  prediction.py
app/main_service/functions/: openai.py  parser.py  pdf.py
app/main_service/functions/extraction/: examples.py  extractor.py  schemas.py
app/main_service/static/about/: script.js  styles.css  styles.min.css
app/main_service/static/analyzer/: script.js  skills.jsonl  styles.css  styles.min.css  upload.css
app/main_service/static/components/: navbar.css  navbar.min.css
app/main_service/static/homepage/: style.min.css  styles.css  styles.min.css
app/main_service/static/prediction/: prediction.css
app/main_service/templates/: about.html  analyzer.html  homepage.html  index.html  prediction.html  templates.py
app/main_service/views/: index.html
app/model_service/: classes.toml  functions.py  main.py
app/model_service/model/: fingerprint.pb  keras_metadata.pb
app/static/homepage/: style.css  style.min.css
app/templates/: homepage.html
data/: skills.toml
notebooks/: BERT.ipynb  LSTM-XGBoost.ipynb  Model-Server.ipynb  Zeroshot-Classification.ipynb
notebooks/old/: Data.ipynb
(+14 files in other folders)
