[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.6.1",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "wordcloud>=1.8.2.2",
    "scikit-learn-intelex>=2023.0.2",
    "scikit-learn>=1.2.1",
    "nltk>=3.8.1",
    "xgboost>=1.7.4",
    "uvicorn>=0.21.1",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "gil.ch", email = "gtorrent12@cs.colman.ac.il"},
]
dependencies = [
    "PyPDF2>=3.0.1",
    "tensorflow>=2.11.0",
    "pip>=23.0.1",
    "toml>=0.10.2",
    "fastapi>=0.95.1",
    "streamlit>=1.12.0",
    "joblib>=1.2.0",
    "python-multipart>=0.0.6",
]
requires-python = ">=3.8, <3.12"
license = {text = "MIT"}
