[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.6.1",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "uvicorn>=0.21.1",
    "httpx>=0.24.0",
    "black[d]>=23.3.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project]
name = "ResuMe"
version = "0.0.1"
description = ""
authors = [
    {name = "gil.ch", email = "gtorrent12@cs.colman.ac.il"},
]
dependencies = [
    "PyPDF2>=3.0.1",
    "tensorflow>=2.11.0",
    "pip>=23.0.1",
    "toml>=0.10.2",
    "fastapi>=0.95.1",
    "python-multipart>=0.0.6",
    "djlint>=1.28.0",
    "transformers>=4.29.2",
    "openai>=0.27.8",
    "langchain>=0.0.190",
    "kor>=0.10.0",
]
requires-python = ">=3.8.1, <3.12"
license = {text = "MIT"}
